# k8-finops-agent

./: .env.ec2.example  .env.example  .gitignore  README.md  USAGE.md  idea.md  k8s_metadata.json  local-usage.md  output.txt  plan-k8-mcp-agent.md  requirements.txt  setup.sh  skills  syallbus.md
.devcontainer/: Dockerfile  devcontainer.json  post-start.sh
.kilo/plans/: 1779446903060-quick-harbor.md  teaching-flow.md
.kilo/skills/: create-presentation-svgs.md  infographic-metaphor.md  (+1 more)
.playwright-cli/: page-2026-06-28T03-50-14-075Z.yml  page-2026-06-28T06-42-56-178Z.yml  page-2026-06-28T06-43-00-251Z.yml  page-2026-06-28T06-43-08-083Z.yml  page-2026-06-28T06-43-10-829Z.yml  page-2026-06-28T06-43-45-459Z.yml  page-2026-06-28T06-43-52-526Z.yml  page-2026-07-05T07-49-07-915Z.yml  page-2026-07-05T07-49-30-321Z.yml  page-2026-07-05T07-49-36-764Z.yml  page-2026-07-05T07-49-43-330Z.yml  page-2026-07-05T07-49-57-532Z.yml
agent/: __init__.py  analyzer.py  github_client.py  main.py  scanner.py
airline-k8-deployment/: kustomization.yaml
helper/: README.md  setup-to-02.sh
sections/: README.md  structure-plan.md
visual-learning/: README.md  pyproject.toml
visual-learning/visuals/: __init__.py
visual-learning/visuals/k8s_finops_mystery/: GAME_DESIGN.md  README.md  app.py  requirements.txt
visual-learning/visuals/k8s_finops_mystery/components/: __init__.py  act1_incident.py  act2_investigation.py  act3_revelation.py  act4_solution.py  minigames.py  state_manager.py  theme.py  ui_components.py
visual-learning/visuals/rag_architecture_builder/: index.html
(+424 files in other folders)
