[project]
name = "visual-learning-games"
version = "0.1.0"
description = "Interactive visual learning games built with Streamlit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.56.0",
    "plotly>=5.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["visuals"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]
